examples/components/error/error-message-postnummer.njk
{% from "components/form/controls/text-input.njk" import textinput as textinput %}
{{textinput(textinput_example.id, textinput_example.label, textinput_example.optionallabel, textinput_example.class, textinput_example.error, textinput_example.name, textinput_example.classLabel, textinput_example.success, textinput_example.disabled, textinput_example.hint, textinput_example.placeholder, textinput_example.value, textinput_example.tooltip, textinput_example.tooltipTitle, textinput_example.readonly)}}
